# BUAT

./: .gitignore  Cargo.toml  LICENSE  README.md  buat  log4rs.yaml
assets/: voidstar.mtl
assets/shaders/: mesh_default.frag  mesh_default.vert  part_default.frag  part_default.vert  part_tex.frag  part_tex.vert  part_textured.frag
ideas/: diene-12_13_2025-1.md  standards.md  zephyros-12_12_2025-1.md  zephyros-12_14_2025-1.md  zephyros-12_15_2025-1.md  zephyros-12_16_2025-1.md
src/: camera.rs  main.rs  mousehandler.rs  part.rs  shader.rs  windowing.rs
src/client/: graphics.rs  main.rs  object.rs
src/client/ecs/: ecs.rs  funcs.rs  mod.rs
src/client/gl/: shader.rs
src/client/graphics/: camera.rs  shader.rs  texture.rs  windowing.rs
src/client/input/: mod.rs  mousehandler.rs
src/client/object/: base.rs  mesh_loader.rs  mod.rs  part.rs
src/client/object/mesh/: mod.rs  obj_loader.rs
src/client/object/part/: consts.rs  mod.rs
src/client/util/: file.rs
src/gl/: camera.rs  windowing.rs
src/object/: base.rs  mesh_loader.rs  obj_loader.rs  part.rs
src/server/: main.rs
