[package]
name = "BUAT"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
gl = "0.14.0"
glfw = "0.61.0"
image = "0.25.9"
imgui-opengl-renderer = "0.12.1"
log = "0.4.29"
log4rs = "1.4.0"
mini-redis = "0.4"
nalgebra-glm = "0.20.0"
rand = "0.9.2"
regex = "1.12.2"
tobj = "4.0.3"
tokio = {version = "1", features = ["full"] }
